// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spySnapshotSerializer keeps other objects 1`] = `
Array [
  "str",
  5,
  Array [
    1,
    2,
    3,
  ],
  Array [
    Object {
      "a": 1,
    },
  ],
]
`;

exports[`spySnapshotSerializer list of logs 1`] = `
Array [
  EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function1(
    ),
    function1(
      null,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    function2.apply(
      null,
      [
      ]
    ),
    function2.apply(
      Array [
        1,
        2,
        3,
      ],
      [
        "str",
      ]
    ),
    object1.property1,
    object1["non keyword property"],
    object1["101_dalmatians"],
    object1[Symbol(foo)],
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
    object2.property2 =
      Symbol(bar),
  ],
  EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function1(
    ),
    function1(
      null,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    function2.apply(
      null,
      [
      ]
    ),
    function2.apply(
      Array [
        1,
        2,
        3,
      ],
      [
        "str",
      ]
    ),
    object1.property1,
    object1["non keyword property"],
    object1["101_dalmatians"],
    object1[Symbol(foo)],
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
    object2.property2 =
      Symbol(bar),
  ],
  EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function1(
    ),
    function1(
      null,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    function2.apply(
      null,
      [
      ]
    ),
    function2.apply(
      Array [
        1,
        2,
        3,
      ],
      [
        "str",
      ]
    ),
    object1.property1,
    object1["non keyword property"],
    object1["101_dalmatians"],
    object1[Symbol(foo)],
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
    object2.property2 =
      Symbol(bar),
  ],
]
`;

exports[`spySnapshotSerializer naked log 1`] = `
EffectsLog [
  function1(
    1,
    2,
    3,
  ),
  function1(
  ),
  function1(
    null,
  ),
  function2.apply(
    Object {
      "a": 1,
    },
    [
      1,
      2,
      3,
    ]
  ),
  function2.apply(
    null,
    [
    ]
  ),
  function2.apply(
    Array [
      1,
      2,
      3,
    ],
    [
      "str",
    ]
  ),
  object1.property1,
  object1["non keyword property"],
  object1["101_dalmatians"],
  object1[Symbol(foo)],
  object2.property2 =
    Array [
      1,
      2,
      3,
    ],
  object2.property2 =
    Symbol(bar),
]
`;

exports[`spySnapshotSerializer object of logs 1`] = `
Object {
  "a": EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function1(
    ),
    function1(
      null,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    function2.apply(
      null,
      [
      ]
    ),
    function2.apply(
      Array [
        1,
        2,
        3,
      ],
      [
        "str",
      ]
    ),
    object1.property1,
    object1["non keyword property"],
    object1["101_dalmatians"],
    object1[Symbol(foo)],
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
    object2.property2 =
      Symbol(bar),
  ],
  "b": EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function1(
    ),
    function1(
      null,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    function2.apply(
      null,
      [
      ]
    ),
    function2.apply(
      Array [
        1,
        2,
        3,
      ],
      [
        "str",
      ]
    ),
    object1.property1,
    object1["non keyword property"],
    object1["101_dalmatians"],
    object1[Symbol(foo)],
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
    object2.property2 =
      Symbol(bar),
  ],
  "c": EffectsLog [
    function1(
      1,
      2,
      3,
    ),
    function1(
    ),
    function1(
      null,
    ),
    function2.apply(
      Object {
        "a": 1,
      },
      [
        1,
        2,
        3,
      ]
    ),
    function2.apply(
      null,
      [
      ]
    ),
    function2.apply(
      Array [
        1,
        2,
        3,
      ],
      [
        "str",
      ]
    ),
    object1.property1,
    object1["non keyword property"],
    object1["101_dalmatians"],
    object1[Symbol(foo)],
    object2.property2 =
      Array [
        1,
        2,
        3,
      ],
    object2.property2 =
      Symbol(bar),
  ],
}
`;
